# farmore

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
farmore/: __init__.py  __main__.py  analytics.py  attachments.py  cli.py  config.py  diff.py  gists.py  git_utils.py  github_api.py  incremental.py  mirror.py  models.py  notifications.py  restore.py  rich_utils.py  scheduler.py  templates.py  transfer.py  validation.py  verify.py
scripts/: build.py  create_readme.py  deploy.py
tests/: __init__.py  conftest.py  test_analytics.py  test_attachments.py  test_config.py  test_diff.py  test_gists.py  test_git_utils.py  test_github_api.py  test_incremental.py  test_models.py  test_notifications.py  test_restore.py  test_rich_formatting.py  test_scheduler.py  test_search_flat_structure.py  test_templates.py  test_transfer.py  test_validation.py  test_verify.py
